Added support for layout managers

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    implementation 'org.swinglabs:swingx:1.6.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
 }
 
 compileKotlin {
