--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -11,3 +11,10 @@ dependencies {
 
     compile project(':')
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        languageVersion = "1.4"
+    }
+}
