--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
+
+        id 'com.diffplug.spotless' version "$spotlessVersion"
+    }
+}
+
 rootProject.name = 'swingkt'
 
 include 'master'
